--- a/src/static/style.css
+++ b/src/static/style.css
@@ -20,7 +20,8 @@
 }
 
 :root {
-  --cycle: 120s;
+  --anim-state: running;
+  --cycle: 90s;
   --seed: 0s;
   --purple: hsl(280, 100%, 50%);
   --blue:   hsl(180, 100%, 50%);
@@ -47,6 +48,10 @@ html {
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+}
+
+html * {
+  animation-play-state: var(--anim-state) !important;
 }
 
 body {
@@ -88,19 +93,16 @@ header .logo img {
   width: 80px;
   margin-top: 15px;
   animation: animation-bg var(--cycle) linear infinite;
-  animation-delay: calc(var(--seed) + -0.75s);
+  animation-delay: var(--seed);
   box-shadow: inset 0 0 0 4px black;
   outline: 2px solid black;
-}
-header .logo img.logo-static {
-  display: none;
 }
 
 header .logo span {
   font-weight: bold;
   line-height: 100px;
   animation: animation-color var(--cycle) linear infinite;
-  animation-delay: calc(var(--seed));
+  animation-delay: var(--seed);
 }
 header .icon img {
   height: 36px;
@@ -686,35 +688,6 @@ table, tr, th, td {
 .lima2::before {
   content: var(--i) var(--s);
 }
-
-/* no-rainbow -bg */
-.no-rainbow header .logo img,
-.no-rainbow header .nav .tab.active a,
-.no-rainbow  h1 a.active,
-.no-rainbow main,
-.no-rainbow .box.image.colored {
-  animation: none;
-  background-color: var(--static-color);
-}
-/* no-rainbow -fg */
-.no-rainbow .logo span,
-.no-rainbow .box a,
-.no-rainbow .box.image a.corner,
-.no-rainbow .box.image a.img div,
-.no-rainbow rbp,
-.no-rainbow rbp *,
-.no-rainbow .lima {
-  animation: none;
-  color: var(--static-color);
-}
-
-.no-rainbow header .logo img.logo-animated {
-  display: none;
-}
-.no-rainbow header .logo img.logo-static {
-  display: block;
-}
-
 
 /* ANIMATIONS ============================================================== */
 @keyframes animation-color {
