Added GitHub header link. Tweaked Acc DB page. Tweaked contribute page.

--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -15,7 +15,7 @@
     roadmap: 'https://github.com/orgs/inputlabs/projects/2',
     forum: 'https://github.com/orgs/inputlabs/discussions',
     discord: 'https://discord.gg/s8Yb4pfusT',
-    youtube: 'https://www.youtube.com/@inputlabs',
+    youtube: 'https://www.youtube.com/@inputlabs/videos',
     patreon: 'https://www.patreon.com/inputlabs',
     shop: 'https://inputlabs.squarespace.com',
   }
