--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -64,6 +64,10 @@ html
           img(src='/static/img/youtube.png')
 
       div.icon
+        +ax(org.repos)
+          img(src='/static/img/github.png')
+
+      div.icon
         +ax(org.patreon)
           img(src='/static/img/patreon.png')
 
