--- a/src/pug/db/stats.pug
+++ b/src/pug/db/stats.pug
@@ -24,6 +24,7 @@ block append subtitle
 
     let game = {
       title: 'Stats',
+      subtitle: '(Use the game list to check each game individually)',
       stub: 'stats',
       reviewDate: null,
       alpakkaProfile: null,
