--- a/src/static/style.css
+++ b/src/static/style.css
@@ -67,7 +67,9 @@ header {
   height: 100px;
   width: 964px;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0;
+  padding-right: 8px;
+  padding-left: 0px;
   box-sizing: border-box;
   background-color: black;
   display: flex;
@@ -105,8 +107,8 @@ header .logo span {
   animation-delay: var(--seed);
 }
 header .icon img {
-  height: 36px;
-  margin-right: 15px;
+  height: 34px;
+  margin-right: 14px;
   opacity: 0.5;
 }
 header .nav .tab a {
@@ -115,7 +117,7 @@ header .nav .tab a {
   text-decoration: none;
   font-size: 19px;
   padding: 8px;
-  margin: 5px;
+  margin: 3px;
   color: hsl(0, 0%, 50%);
   white-space: nowrap;
 }
@@ -729,16 +731,18 @@ table, tr, th, td {
 }
 
 /* RESPONSIVE ============================================================== */
+/* SMALL */
 @media (max-width: 964px) {
   .box {
     font-size: 16px;
   }
   header {
     width: 480px;
+    padding-left: 0px;
   }
   header .icon img {
-    height: 44px;
-    margin-right: 18px;
+    height: 36px;
+    margin-right: 14px;
   }
   header .nav.hide {
     visibility: hidden;
@@ -757,6 +761,7 @@ table, tr, th, td {
   }
   header .mininav {
     display: initial;
+    padding-bottom: 2px;
   }
   main .boxes {
     width: 480px;
@@ -779,12 +784,17 @@ table, tr, th, td {
     text-align: center;
   }
 }
+/* LARGE */
 @media (min-width: 1446px) {
   header {
     width: 1450px;
   }
   header .icon img{
-    margin-right: 24px;
+    height: 36px;
+    margin-right: 18px;
+  }
+  header .nav .tab a {
+    margin: 5px;
   }
   main .boxes {
     width: 1446px;
