Typo missing the word conductive

--- a/src/pug/blog/report_9.pug
+++ b/src/pug/blog/report_9.pug
@@ -11,7 +11,7 @@ block content
   p We released #[+ax('https://github.com/inputlabs/alpakka_firmware/releases/tag/0.88.0') Firmware 0.88.0] for the Alpakka controller, with plenty of improvements and fixes:
 
   h4 Automatic touch threshold
-  p In previous releases we implemented the option to manually adjust the touch surface sensitivity threshold, this was important to support different electrically materials and different setups. Now we are adding an #[em auto] value which detects and adjusts the threshold automagically. This is now the default value, but manual threshold values are still available through the #[+a('/alpakka/manual/tune') Tune settings].
+  p In previous releases we implemented the option to manually adjust the touch surface sensitivity threshold, this was important to support different electrically conductive materials and different setups. Now we are adding an #[em auto] value which detects and adjusts the threshold automagically. This is now the default value, but manual threshold values are still available through the #[+a('/alpakka/manual/tune') Tune settings].
 
   h4 Any button to engage gyro
   p Now is possible to use any button to enable the gyro, this may be important for builds without a conductive touch surface, or for accessibility reasons. For example, if we want to use the #[em R4] to trigger the gyro, we can define the profile as:
