--- a/src/pug/db/_db.pug
+++ b/src/pug/db/_db.pug
@@ -21,17 +21,21 @@ block page
 
         h3 Games
         div
+          +wikilink('apex_legends') Apex Legends
           +wikilink('battlefield_4') Battlefield 4
           +wikilink('borderlands_3') Borderlands 3
           +wikilink('bullets_per_minute') Bullets Per Minute
+          +wikilink('control') Control
           +wikilink('warzone_2') Call of Duty: Warzone 2
           +wikilink('days_gone') Days Gone
           +wikilink('deep_rock_galactic') Deep Rock Galactic
+          +wikilink('dishonored_2') Dishonored 2
           +wikilink('doom_2016') Doom (2016)
           +wikilink('elden_ring') Elden Ring
           +wikilink('far_cry_5') Far Cry 5
           +wikilink('fortnite') Fortnite
           +wikilink('ghostrunner') Ghostrunner
+          +wikilink('gta_v') Grand Theft Auto V
           +wikilink('half_life_2') Half-Life 2
           +wikilink('horizon_zero_dawn') Horizon Zero Dawn
           +wikilink('hunt_showdown') Hunt: Showdown
@@ -46,6 +50,7 @@ block page
           +wikilink('rainbow_six_siege') Rainbow Six Siege
           +wikilink('risk_of_rain_2') Risk of Rain 2
           +wikilink('superhot_mcd') Superhot: Mind Control Delete
+          +wikilink('skyrim') The Elder Scrolls V: Skyrim
           +wikilink('the_witcher_3') The Witcher 3
           +wikilink('titanfall_2') Titanfall 2
 
